--- a/requirements.txt
+++ b/requirements.txt
@@ -61,6 +61,7 @@ nbconvert==6.0.7
 nbformat==5.0.8
 nest-asyncio==1.4.1
 networkx==2.5
+nltk==3.5
 notebook==6.1.4
 numpy==1.18.5
 oauthlib==3.1.0
@@ -90,6 +91,7 @@ pyrsistent==0.17.3
 python-dateutil==2.8.1
 pytz==2020.1
 pyzmq==19.0.2
+rake-nltk==1.0.4
 regex==2020.10.23
 requests==2.24.0
 requests-oauthlib==1.3.0
