--- a/requirements.txt
+++ b/requirements.txt
@@ -22,11 +22,13 @@ chardet==3.0.4
 click==7.1.2
 coverage==5.3
 cymem==2.0.3
+dataclasses==0.6
 decorator==4.4.2
 defusedxml==0.6.0
 entrypoints==0.3
 enum-compat==0.0.3
 filelock==3.0.12
+future==0.18.2
 gast==0.3.3
 gensim==3.8.3
 gitdb==4.0.5
@@ -119,10 +121,14 @@ thinc==7.4.1
 tokenizers==0.9.2
 toml==0.10.1
 toolz==0.11.1
+torch==1.7.0
+torchaudio==0.7.0
+torchvision==0.8.1
 tornado==6.0.4
 tqdm==4.50.2
 traitlets==5.0.5
 transformers==3.4.0
+typing-extensions==3.7.4.3
 tzlocal==2.1
 urllib3==1.25.11
 validators==0.18.1
@@ -135,5 +141,3 @@ widgetsnbextension==3.5.1
 wikipedia==1.4.0
 wrapt==1.12.1
 zipp==3.3.1
-nltk==3.5
-rake-nltk==1.0.4
