--- a/requirements.txt
+++ b/requirements.txt
@@ -42,7 +42,8 @@ h5py==2.10.0
 idna==2.10
 importlib-metadata==2.0.0
 ipykernel==5.3.4
-ipython==7.18.1
+ipython
+#ipython==7.18.1
 ipython-genutils==0.2.0
 ipywidgets==7.5.1
 jedi==0.17.2
@@ -126,7 +127,8 @@ torchaudio==0.7.0
 torchvision==0.8.1
 tornado==6.0.4
 tqdm==4.50.2
-traitlets==5.0.5
+traitlets
+#traitlets==5.0.5
 transformers==3.4.0
 typing-extensions==3.7.4.3
 tzlocal==2.1
