--- a/requirements.txt
+++ b/requirements.txt
@@ -1,143 +1,92 @@
-absl-py==0.10.0
 altair==4.1.0
-appnope==0.1.0
+appnope==0.1.2
 argon2-cffi==20.1.0
 astor==0.8.1
-astunparse==1.6.3
 async-generator==1.10
-attrs==20.2.0
+attrs==20.3.0
 backcall==0.2.0
 base58==2.0.1
 beautifulsoup4==4.9.3
 bleach==3.2.1
 blinker==1.4
-blis==0.4.1
-boto3==1.16.0
-botocore==1.19.0
-cachetools==4.1.1
-catalogue==1.0.0
-certifi==2020.6.20
-cffi==1.14.3
-chardet==3.0.4
+cachetools==4.2.0
+certifi==2020.12.5
+cffi==1.14.4
+chardet==4.0.0
 click==7.1.2
-coverage==5.3
-cymem==2.0.3
-dataclasses==0.6
 decorator==4.4.2
 defusedxml==0.6.0
 entrypoints==0.3
-enum-compat==0.0.3
-filelock==3.0.12
-future==0.18.2
-gast==0.3.3
 gensim==3.8.3
 gitdb==4.0.5
-GitPython==3.1.9
-google-auth==1.22.1
-google-auth-oauthlib==0.4.1
-google-pasta==0.2.0
-graphviz==0.14.2
-grpcio==1.33.1
-h5py==2.10.0
+GitPython==3.1.11
 idna==2.10
-importlib-metadata==2.0.0
-ipykernel==5.3.4
-ipython==7.18.1
+importlib-metadata==3.3.0
+ipykernel==5.4.2
+ipython==7.19.0
 ipython-genutils==0.2.0
 ipywidgets==7.5.1
 jedi==0.17.2
 Jinja2==2.11.2
-jmespath==0.10.0
-joblib==0.17.0
+joblib==1.0.0
 jsonschema==3.2.0
 jupyter-client==6.1.7
-jupyter-core==4.6.3
+jupyter-core==4.7.0
 jupyterlab-pygments==0.1.2
-Keras-Preprocessing==1.1.2
-Markdown==3.3.2
 MarkupSafe==1.1.1
 mistune==0.8.4
-murmurhash==1.0.2
 nbclient==0.5.1
 nbconvert==6.0.7
 nbformat==5.0.8
-nest-asyncio==1.4.1
-networkx==2.5
+nest-asyncio==1.4.3
 nltk==3.5
-notebook==6.1.4
-numpy==1.18.5
-oauthlib==3.1.0
-opt-einsum==3.3.0
-packaging==20.4
-pandas==1.1.3
-pandocfilters==1.4.2
+notebook==6.1.5
+numpy==1.19.4
+packaging==20.8
+pandas==1.1.5
+pandocfilters==1.4.3
 parso==0.7.1
-pathtools==0.1.2
 pexpect==4.8.0
 pickleshare==0.7.5
-Pillow==8.0.0
-plac==1.1.3
-preshed==3.0.2
-prometheus-client==0.8.0
+Pillow==8.0.1
+prometheus-client==0.9.0
 prompt-toolkit==3.0.8
-protobuf==3.13.0
+protobuf==3.14.0
 ptyprocess==0.6.0
 pyarrow==2.0.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
 pycparser==2.20
-pydeck==0.5.0b1
-Pygments==2.7.1
+pydeck==0.5.0
+Pygments==2.7.3
 pyparsing==2.4.7
 pyrsistent==0.17.3
 python-dateutil==2.8.1
-pytz==2020.1
-pyzmq==19.0.2
+pytz==2020.4
+pyzmq==20.0.0
 rake-nltk==1.0.4
-regex==2020.10.23
-requests==2.24.0
-requests-oauthlib==1.3.0
-rsa==4.6
-s3transfer==0.3.3
-sacremoses==0.0.43
-scipy==1.5.3
+regex==2020.11.13
+requests==2.25.1
+scipy==1.5.4
 Send2Trash==1.5.0
-sentencepiece==0.1.94
 six==1.15.0
-smart-open==3.0.0
+smart-open==4.0.1
 smmap==3.0.4
-soupsieve==2.0.1
-spacy==2.3.2
-srsly==1.0.2
-streamlit==0.69.2
-tensorboard==2.3.0
-tensorboard-plugin-wit==1.7.0
-tensorflow==2.3.1
-tensorflow-estimator==2.3.0
-termcolor==1.1.0
+soupsieve==2.1
+streamlit==0.73.0
 terminado==0.9.1
 testpath==0.4.4
-thinc==7.4.1
-tokenizers==0.9.2
-toml==0.10.1
+toml==0.10.2
 toolz==0.11.1
-torch==1.7.0
-torchaudio==0.7.0
-torchvision==0.8.1
-tornado==6.0.4
-tqdm==4.50.2
+tornado==6.1
+tqdm==4.54.1
 traitlets==5.0.5
-transformers==3.4.0
 typing-extensions==3.7.4.3
 tzlocal==2.1
-urllib3==1.25.11
-validators==0.18.1
-wasabi==0.8.0
-watchdog==0.10.3
+urllib3==1.26.2
+validators==0.18.2
+watchdog==1.0.2
 wcwidth==0.2.5
 webencodings==0.5.1
-Werkzeug==1.0.1
 widgetsnbextension==3.5.1
 wikipedia==1.4.0
-wrapt==1.12.1
-zipp==3.3.1
+Wikipedia-API==0.5.4
+zipp==3.4.0
